--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "ajv": "6.12.0",
-    "axios": "0.21.1",
     "autoprefixer": "^9.1.0",
+    "axios": "0.21.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
